--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.18.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
